vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinitionAss_v2__c/SDO_Analytics_AIAgentTagDefinitionAss_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentTagDefinitionAssociation</label>
    <nameField>
        <label>AIAgentTagDefinitionAssociation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentTagDefinitionAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>