vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinitionAss_v2__c/fields/AI_Prompt_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Template_Id__c</fullName>
    <label>AI Prompt Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>