vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinitionAss_v2__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <label>Created Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>