vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinitionAss_v2__c/fields/Demo_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Demo_Identifier__c</fullName>
    <label>Demo Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>