vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinitionAss_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_Api_Name__c</columns>
    <columns>AI_Agent_Tag_Definition_Id__c</columns>
    <columns>AI_Prompt_Template_Id__c</columns>
    <columns>Created_Time__c</columns>
    <columns>Created_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>